--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "node-dev": "~2.1.6"
   },
   "dependencies": {
+    "body-parser": "^1.10.1",
+    "express": "^4.10.7",
+    "morgan": "^1.5.1"
   }
 }
